--- a/floats.tex
+++ b/floats.tex
@@ -11,7 +11,7 @@
 \begin{figure*}[htb]
 	\centering
 	\includegraphics[width=0.9\linewidth]{figures/pdf/device-crop.pdf}	
-	\caption{Typical ULP device is composed of 1) series of sensors (e.g. camera, microphone, GPS, accelerometer, etc.), 2) low-power radio (e.g. LoRaWAN or BLE), 3) low-power microcontroller, the focus of this thesis, 4) power source like a battery or capacitor and 5) an optional energy harvester like a solar cell.}
+	\caption{Typical ULP device is composed of 1) series of sensors (e.g., camera, microphone, GPS, accelerometer, etc.), 2) low-power radio (e.g., LoRaWAN or BLE), 3) low-power microcontroller, the focus of this thesis, 4) power source like a battery or capacitor and 5) an optional energy harvester like a solar cell.}
 	\label{fig:device}
 \end{figure*}
 }
