--- a/manic/floats.tex
+++ b/manic/floats.tex
@@ -291,7 +291,7 @@ ICache Associativity                   & 1/2/4/8                  & 2           
 			  Impact of \manic's optimizations on full system energy,
                           comparing (from left-to-right): vector baseline, \manic with forwarding disabled, \manic without dataflow code scheduling, and full \manic.
                           Without forwarding, \manic's added components slightly increase energy by <5\%.
-                          Forwarding saves $15.5\%$ system energy vs.\ the baseline,
+                          Forwarding saves $15.5\%$ system energy v.\ the baseline,
                           and kill annotations and dataflow code scheduling saves a further $26.0\%$.}
 			\label{fig:manic:compare}
 		\end{minipage}
@@ -442,7 +442,7 @@ ICache Associativity                   & 1/2/4/8                  & 2           
 }
 \end{tabular}
 }
-\caption{\manic vs.\ prior work. \manic is $2.6\times$ more efficient than prior work, achieving 256 MOPS/mW (@19$\mu$W \& 4MHz).}
+\caption{\manic v.\ prior work. \manic is $2.6\times$ more efficient than prior work, achieving 256 MOPS/mW (@19$\mu$W \& 4MHz).}
 \label{tab:manic:eval}
 %% \vspace{-1.5em}
 \end{table}
