--- a/riptide/floats.tex
+++ b/riptide/floats.tex
@@ -239,7 +239,7 @@
   %% \texttt{AP} = annotations for programming; 
   %% \texttt{AT} = annotations for targeting/offloading 
   %% \item \textbf{*} Scheduling listed as "spatial" or "temporal" are \textit{static} schedules.
-  %% \item \textbf{$\dagger$}: Limited support for constructs/idioms indicated using brackets (e.g. [\texttt{CE}])
+  %% \item \textbf{$\dagger$}: Limited support for constructs/idioms indicated using brackets (e.g., [\texttt{CE}])
   %% \item \textbf{$\ddagger$}: We uses a compiler command-line option to specify which function(s) to target for \riptide. 
   %% \item
   %% \end{tablenotes}
@@ -404,7 +404,7 @@
     \tiny
   \item \textbf{Legend}: \texttt{RA} = requires annotations; \texttt{DLN} = deep loop nests; \texttt{IMA} = indirect memory accesses; \texttt{AL} = affine loops;
   \item \texttt{IAL} = [irregular | affine] loops; \texttt{MO} = memory ordering; \texttt{OMO} = optimized \texttt{MO}; \texttt{CE} = conditional execution
-  \item \textbf{$\dagger$}: Limited program support is indicated using brackets (e.g. [\texttt{CE}])
+  \item \textbf{$\dagger$}: Limited program support is indicated using brackets (e.g., [\texttt{CE}])
   \item \textbf{$\ddagger$}: We note that Plasticine uses a parallel patterns DSL, different than most CGRAs. 
   \item \textbf{*} "Static" refers to kernels scheduled to the CGRA across space \textit{and} time.
   \end{tablenotes}
