--- a/snafu/0_intro.tex
+++ b/snafu/0_intro.tex
@@ -75,10 +75,10 @@ and it reduces design effort of tape-out via top-down synthesis of CGRAs.
   RISC-V scalar core, and memory.
   We implement \snafuarch in an industrial sub-28\,nm FinFET process with compiled memories.
   \snafuarch operates at $<$1\,mW at 50\,MHz.
-  \snafuarch reduces energy by $81\%$ vs.\ a scalar core
-  and $41\%$ vs.\ \manic;
-  and improves performance by $9.9\times$ vs.\ a scalar core
-  and $4.4\times$ vs. \manic.
+  \snafuarch reduces energy by $81\%$ v.\ a scalar core
+  and $41\%$ v.\ \manic;
+  and improves performance by $9.9\times$ v.\ a scalar core
+  and $4.4\times$ v. \manic.
 
 \item Finally, we quantify the cost of programmability through three
   comprehensive case studies that compare \snafuarch against
