--- a/snafu/7_case.tex
+++ b/snafu/7_case.tex
@@ -56,7 +56,7 @@ accelerate only the inner-loop of the kernel ({\scshape Dot-Accel} and
 {\scshape FFT1D-Accel}), just like \snafuarch.
 % 
 These designs add $33\%$ energy to run outer loops on the scalar core,
-reducing the energy gap to $2.2\times$ (vs.\ $2.5\times$ for these benchmarks previously).
+reducing the energy gap to $2.2\times$ (v.\ $2.5\times$ for these benchmarks previously).
 %
 A future version of \snafu could eliminate this extra scalar energy by mapping outer loops to its fabric~\cite{weng2020hybrid}.
 
@@ -132,7 +132,7 @@ programmability also has a low cost.
 
 The above comparisons yield three major takeaways.
 %
-The big picture is that \bigemph{the total cost of \snafu's programmability is {\mbox{2--3$\times$}}} in energy and time vs.\ a fully specialized ASIC.
+The big picture is that \bigemph{the total cost of \snafu's programmability is {\mbox{2--3$\times$}}} in energy and time v.\ a fully specialized ASIC.
 %
 While significant, this gap is much smaller than the 25$\times$ (or larger) gap found in some prior studies~\cite{hameed2010understanding}.%
 %
