--- a/snafu/floats.tex
+++ b/snafu/floats.tex
@@ -178,7 +178,7 @@
 % 			\label{fig:snafu:sens:size:perf}
 % 		\end{subfigure}
 % 		\vspace{1.1em}
-% 		\caption{\snafuarch vs.\ the scalar design across three input sizes -- small (S), medium (M) and large (L).}
+% 		\caption{\snafuarch v.\ the scalar design across three input sizes -- small (S), medium (M) and large (L).}
 % 		\label{fig:snafu:sens:size}
 % 	\end{minipage}
 %   \hfill
@@ -225,7 +225,7 @@
 	\hfill
 	\begin{minipage}{0.001\linewidth}
 	\end{minipage}
-	\caption{\snafuarch vs.\ the scalar design across three input sizes -- small (S), medium (M) and large (L).}
+	\caption{\snafuarch v.\ the scalar design across three input sizes -- small (S), medium (M) and large (L).}
 	\label{fig:snafu:sens:size}
 \end{figure*}
 }
