--- a/sonic/0_intro.tex
+++ b/sonic/0_intro.tex
@@ -49,7 +49,7 @@ These MCUs systems run at low frequency (1--16 MHz) and have very small
 memories (tens or hundreds of kilobytes).
 %
 Their simple architectures limit them to executing a few 
-million operations per second, while consuming only 1--3mW%
+million operations per second, while consuming only 3--5mW%
 ---a power envelope two orders of magnitude lower than recent DNN accelerators.
 
 DNN inference on these devices is unexplored, and several challenges
@@ -104,7 +104,7 @@ performance (\autoref{sonic:genesis}).
   chollet2016xception, bhattacharya2016sparsification};
 %
 our contribution is that \genesis optimally balances inference energy
-vs.\ accuracy. % to maximize IoT application performance.
+v.\ accuracy. % to maximize IoT application performance.
 %
 \item We design and implement \sonic, 
   a software system for DNN inference with specialized support for intermittent execution
