--- a/sonic/floats.tex
+++ b/sonic/floats.tex
@@ -36,7 +36,7 @@
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.75\linewidth]{sonic/figures/pdf/motivation_results-crop.pdf}
-	\caption{Local inference (i.e. Naive and \sonictails) lets energy-harvesting devices communicate only \emph{results} of inference, enabling dramatic increases in end-to-end system performance.}
+	\caption{Local inference (i.e., Naive and \sonictails) lets energy-harvesting devices communicate only \emph{results} of inference, enabling dramatic increases in end-to-end system performance.}
 	\label{fig:sonic:motivation:results}
 \end{figure}
 }
