--- a/headers.tex
+++ b/headers.tex
@@ -1,4 +1,3 @@
-\usepackage{cite}
 \usepackage{array}
 \usepackage{tablefootnote}
 \usepackage{amsmath,amssymb,amsfonts}
@@ -23,6 +22,8 @@
 \usepackage{makecell}
 \usepackage{pifont}
 \usepackage[percent]{overpic}
+\usepackage[T1]{fontenc}
+\usepackage[noadjust]{cite}
 
 %% https://tex.stackexchange.com/questions/55664/fake-small-caps-with-xetex-fontspec
 %% https://tex.stackexchange.com/questions/364994/putting-a-matrix-inside-of-caption-gives-caption-has-an-extra
